--- a/index.html
+++ b/index.html
@@ -1,16 +1,153 @@
+<!DOCTYPE html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Mission 2026</title>
     <style>
-        /* Paste all the CSS here */
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f0f2f5; --white: #ffffff; }
-        
-        header { 
-            background: var(--white); 
-            display: flex; 
-            justify-content: space-between; 
-            align-items: center; 
-            padding: 15px 8%; 
+        /* CSS GOES INSIDE THESE STYLE TAGS */
+        :root {
+            --blue: #003973;
+            --yellow: #FFD700;
+            --bg: #f0f2f5;
+            --white: #ffffff;
+            --shadow: 0 4px 20px rgba(0,0,0,0.08);
         }
-        
-        /* ... the rest of the CSS we worked on ... */
+
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--bg); color: #333; line-height: 1.6; }
+
+        /* TICKER */
+        .ticker-wrap { background: var(--yellow); color: var(--blue); padding: 10px 0; font-weight: 700; overflow: hidden; white-space: nowrap; }
+        .ticker-move { display: inline-block; padding-left: 100%; animation: ticker 30s linear infinite; }
+        @keyframes ticker { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
+
+        /* HEADER & OPTIONS */
+        header {
+            background: var(--white);
+            height: 80px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 0 8%;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .logo { font-size: 28px; font-weight: 800; color: var(--blue); text-decoration: none; }
+        .nav-links { display: flex; align-items: center; gap: 30px; }
+        .nav-links a { text-decoration: none; color: #555; font-weight: 600; }
+        .lang-box { padding: 8px 12px; border: 2px solid var(--blue); border-radius: 8px; font-weight: bold; cursor: pointer; }
+
+        /* HERO */
+        .container { max-width: 1100px; margin: 40px auto; padding: 0 5%; }
+        .hero-box {
+            background: linear-gradient(135deg, var(--blue) 0%, #0056b3 100%);
+            border-radius: 24px;
+            padding: 60px 20px;
+            color: white;
+            text-align: center;
+            border-bottom: 8px solid var(--yellow);
+            box-shadow: var(--shadow);
+        }
+        .id-input { width: 90%; max-width: 400px; padding: 15px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
+
+        /* TRACKS */
+        .section-title { font-size: 2rem; color: var(--blue); margin: 50px 0 25px; border-left: 10px solid var(--yellow); padding-left: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
+        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: var(--shadow); text-align: center; transition: 0.3s; }
+        .card:hover { transform: translateY(-10px); }
+        .card img { width: 100%; height: 180px; object-fit: cover; }
+        .card-info { padding: 20px; }
+        .btn { background: var(--blue); color: white; border: none; padding: 12px; width: 100%; border-radius: 10px; cursor: pointer; font-weight: bold; }
+
+        /* FAQ */
+        .faq-item { background: white; padding: 20px; border-radius: 15px; margin-bottom: 10px; border: 1px solid #ddd; cursor: pointer; }
+        .ans { display: none; padding-top: 15px; color: #666; }
     </style>
 </head>
+<body>
+
+<div class="ticker-wrap"><div class="ticker-move">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID •</div></div>
+
+<header>
+    <a href="#" class="logo">ልማት Hub</a>
+    <div class="nav-links">
+        <a href="#about" id="n-about">About</a>
+        <a href="#tracks" id="n-tracks">Tracks</a>
+        <select class="lang-box" onchange="updLang(this.value)">
+            <option value="en">English</option>
+            <option value="am">አማርኛ</option>
+            <option value="om">Oromoo</option>
+        </select>
+    </div>
+</header>
+
+<div class="container">
+    <div class="hero-box">
+        <h1 id="h-t">Ethiopia's 2026 Digital Mission</h1>
+        <p id="h-s">Enter Fayda ID to verify enrollment</p>
+        <input type="number" class="id-input" placeholder="ID Number">
+        <br>
+        <button class="btn" style="background:var(--yellow); color:var(--blue); width:auto; padding:15px 40px;">VERIFY</button>
+    </div>
+
+    <div id="about">
+        <h2 class="section-title" id="a-h">About Us</h2>
+        <div style="background:white; padding:30px; border-radius:20px;" id="a-p">Empowering citizens for a digital future.</div>
+    </div>
+
+    <div id="tracks">
+        <h2 class="section-title" id="t-h">Official Tracks</h2>
+        <div class="grid" id="track-list"></div>
+    </div>
+
+    <div id="faq">
+        <h2 class="section-title" id="f-h">FAQ</h2>
+        <div id="faq-list"></div>
+    </div>
+</div>
+
+<script>
+    const images = [
+        "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", 
+        "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500",
+        "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500",
+        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500",
+        "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500",
+        "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500",
+        "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500",
+        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500",
+        "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500",
+        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"
+    ];
+
+    const lang = {
+        en: {
+            hT: "Ethiopia's 2026 Digital Mission", aH: "About Us", tH: "Official Tracks", fH: "FAQ", jB: "JOIN TRACK",
+            tracks: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"]
+        },
+        am: {
+            hT: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", aH: "ስለ እኛ", tH: "ይፋዊ ትራኮች", fH: "ጥያቄዎች", jB: "ተቀላቀል",
+            tracks: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"]
+        }
+    };
+
+    function updLang(l) {
+        const d = lang[l] || lang.en;
+        document.getElementById('h-t').innerText = d.hT;
+        document.getElementById('a-h').innerText = d.aH;
+        document.getElementById('t-h').innerText = d.tH;
+        document.getElementById('f-h').innerText = d.fH;
+
+        const tList = document.getElementById('track-list'); tList.innerHTML = "";
+        d.tracks.forEach((t, i) => {
+            tList.innerHTML += `<div class="card"><img src="${images[i]}"><div class="card-info"><h3>${t}</h3><button class="btn">${d.jB}</button></div></div>`;
+        });
+    }
+    updLang('en');
+</script>
+</body>
+</html>
