--- a/index.html
+++ b/index.html
@@ -3,81 +3,74 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Mission 2026</title>
+    <title>ልማት Hub | Digital Ethiopia 2026</title>
     <style>
-        /* CSS GOES INSIDE THESE STYLE TAGS */
         :root {
             --blue: #003973;
             --yellow: #FFD700;
-            --bg: #f0f2f5;
+            --bg: #f4f7f9;
             --white: #ffffff;
-            --shadow: 0 4px 20px rgba(0,0,0,0.08);
         }
 
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
-        body { background: var(--bg); color: #333; line-height: 1.6; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--bg); color: #333; }
 
-        /* TICKER */
-        .ticker-wrap { background: var(--yellow); color: var(--blue); padding: 10px 0; font-weight: 700; overflow: hidden; white-space: nowrap; }
-        .ticker-move { display: inline-block; padding-left: 100%; animation: ticker 30s linear infinite; }
-        @keyframes ticker { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
-
-        /* HEADER & OPTIONS */
+        /* HEADER */
         header {
             background: var(--white);
-            height: 80px;
+            height: 70px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             padding: 0 8%;
-            box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             position: sticky;
             top: 0;
             z-index: 1000;
         }
-
-        .logo { font-size: 28px; font-weight: 800; color: var(--blue); text-decoration: none; }
-        .nav-links { display: flex; align-items: center; gap: 30px; }
-        .nav-links a { text-decoration: none; color: #555; font-weight: 600; }
-        .lang-box { padding: 8px 12px; border: 2px solid var(--blue); border-radius: 8px; font-weight: bold; cursor: pointer; }
+        .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
+        .nav-links { display: flex; gap: 20px; align-items: center; }
+        .nav-links a { text-decoration: none; color: #444; font-weight: 600; }
+        .lang-select { padding: 5px; border-radius: 5px; border: 1.5px solid var(--blue); cursor: pointer; }
 
         /* HERO */
-        .container { max-width: 1100px; margin: 40px auto; padding: 0 5%; }
-        .hero-box {
-            background: linear-gradient(135deg, var(--blue) 0%, #0056b3 100%);
-            border-radius: 24px;
-            padding: 60px 20px;
+        .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
+        .hero {
+            background: var(--blue);
             color: white;
+            padding: 50px 20px;
+            border-radius: 20px;
             text-align: center;
             border-bottom: 8px solid var(--yellow);
-            box-shadow: var(--shadow);
         }
-        .id-input { width: 90%; max-width: 400px; padding: 15px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
+        .id-input { padding: 12px; width: 80%; max-width: 350px; border-radius: 8px; border: none; margin: 15px 0; text-align: center; }
 
         /* TRACKS */
-        .section-title { font-size: 2rem; color: var(--blue); margin: 50px 0 25px; border-left: 10px solid var(--yellow); padding-left: 15px; }
+        .section-h { color: var(--blue); margin: 40px 0 20px; border-left: 6px solid var(--yellow); padding-left: 15px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: var(--shadow); text-align: center; transition: 0.3s; }
-        .card:hover { transform: translateY(-10px); }
+        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); }
         .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-info { padding: 20px; }
-        .btn { background: var(--blue); color: white; border: none; padding: 12px; width: 100%; border-radius: 10px; cursor: pointer; font-weight: bold; }
+        .card-body { padding: 20px; text-align: center; }
+        
+        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; }
+        .btn:hover { background: var(--blue); color: white; }
 
-        /* FAQ */
-        .faq-item { background: white; padding: 20px; border-radius: 15px; margin-bottom: 10px; border: 1px solid #ddd; cursor: pointer; }
-        .ans { display: none; padding-top: 15px; color: #666; }
+        /* CONTACT US */
+        .contact-form { background: white; padding: 30px; border-radius: 15px; border: 1px solid #ddd; }
+        .contact-form input, .contact-form textarea { width: 100%; padding: 10px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 5px; }
+
+        footer { text-align: center; padding: 40px; color: #777; font-size: 0.9rem; }
     </style>
 </head>
 <body>
 
-<div class="ticker-wrap"><div class="ticker-move">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID •</div></div>
-
 <header>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-links">
-        <a href="#about" id="n-about">About</a>
-        <a href="#tracks" id="n-tracks">Tracks</a>
-        <select class="lang-box" onchange="updLang(this.value)">
+        <a href="#about" id="nav-a">About</a>
+        <a href="#tracks" id="nav-t">Tracks</a>
+        <select class="lang-select" onchange="updLang(this.value)">
             <option value="en">English</option>
             <option value="am">አማርኛ</option>
             <option value="om">Oromoo</option>
@@ -86,29 +79,35 @@
 </header>
 
 <div class="container">
-    <div class="hero-box">
-        <h1 id="h-t">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-s">Enter Fayda ID to verify enrollment</p>
-        <input type="number" class="id-input" placeholder="ID Number">
+    <div class="hero">
+        <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
+        <p id="h-sub">Enter Fayda ID to verify enrollment</p>
+        <input type="number" id="id-box" class="id-input" placeholder="Fayda ID Number">
         <br>
-        <button class="btn" style="background:var(--yellow); color:var(--blue); width:auto; padding:15px 40px;">VERIFY</button>
+        <button class="btn" style="width:auto; padding: 12px 40px;" onclick="alert('Verification logic active!')">VERIFY</button>
     </div>
 
     <div id="about">
-        <h2 class="section-title" id="a-h">About Us</h2>
-        <div style="background:white; padding:30px; border-radius:20px;" id="a-p">Empowering citizens for a digital future.</div>
+        <h2 class="section-h" id="a-head">About Us</h2>
+        <p id="a-text" style="background:white; padding:20px; border-radius:10px;">ልማት Hub is dedicated to Ethiopia's digital transformation journey.</p>
     </div>
 
     <div id="tracks">
-        <h2 class="section-title" id="t-h">Official Tracks</h2>
+        <h2 class="section-h" id="t-head">Official Tracks</h2>
         <div class="grid" id="track-list"></div>
     </div>
 
-    <div id="faq">
-        <h2 class="section-title" id="f-h">FAQ</h2>
-        <div id="faq-list"></div>
+    <div id="contact">
+        <h2 class="section-h" id="c-head">Contact Us</h2>
+        <div class="contact-form">
+            <input type="text" id="c-name" placeholder="Full Name">
+            <textarea id="c-msg" placeholder="Your Message" rows="4"></textarea>
+            <button class="btn" onclick="alert('Message Sent!')">Send Message</button>
+        </div>
     </div>
 </div>
+
+<footer>© 2026 ልማት Hub | Official Partner</footer>
 
 <script>
     const images = [
@@ -124,29 +123,34 @@
         "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"
     ];
 
-    const lang = {
+    const data = {
         en: {
-            hT: "Ethiopia's 2026 Digital Mission", aH: "About Us", tH: "Official Tracks", fH: "FAQ", jB: "JOIN TRACK",
-            tracks: ["AI", "Cyber", "Web", "Data", "Cloud", "Mobile", "Block", "UI/UX", "IoT", "Fintech"]
+            title: "Ethiopia's 2026 Digital Mission", vbtn: "VERIFY", about: "About Us", tracks: "Official Tracks", contact: "Contact Us", join: "JOIN TRACK",
+            trackNames: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"]
         },
         am: {
-            hT: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", aH: "ስለ እኛ", tH: "ይፋዊ ትራኮች", fH: "ጥያቄዎች", jB: "ተቀላቀል",
-            tracks: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"]
+            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", vbtn: "አረጋግጥ", about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", contact: "ያግኙን", join: "ተቀላቀል",
+            trackNames: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"]
         }
     };
 
     function updLang(l) {
-        const d = lang[l] || lang.en;
-        document.getElementById('h-t').innerText = d.hT;
-        document.getElementById('a-h').innerText = d.aH;
-        document.getElementById('t-h').innerText = d.tH;
-        document.getElementById('f-h').innerText = d.fH;
+        const d = data[l] || data.en;
+        document.getElementById('h-title').innerText = d.title;
+        document.getElementById('a-head').innerText = d.about;
+        document.getElementById('t-head').innerText = d.tracks;
+        document.getElementById('c-head').innerText = d.contact;
 
-        const tList = document.getElementById('track-list'); tList.innerHTML = "";
-        d.tracks.forEach((t, i) => {
-            tList.innerHTML += `<div class="card"><img src="${images[i]}"><div class="card-info"><h3>${t}</h3><button class="btn">${d.jB}</button></div></div>`;
+        const list = document.getElementById('track-list');
+        list.innerHTML = "";
+        d.trackNames.forEach((name, i) => {
+            list.innerHTML += `<div class="card">
+                <img src="${images[i]}">
+                <div class="card-body"><h3>${name}</h3><button class="btn" onclick="alert('Joining ${name}...')">${d.join}</button></div>
+            </div>`;
         });
     }
+
     updLang('en');
 </script>
 </body>
