--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Digital Ethiopia 2026</title>
+    <title>ልማት Hub | Official Digital Mission</title>
     <style>
         :root {
             --blue: #003973;
@@ -15,7 +15,30 @@
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
         body { background: var(--bg); color: #333; }
 
-        /* HEADER */
+        /* 1. SCROLLING TICKER */
+        .ticker-wrap {
+            background: var(--yellow);
+            color: var(--blue);
+            padding: 10px 0;
+            font-weight: bold;
+            overflow: hidden;
+            white-space: nowrap;
+            position: sticky;
+            top: 0;
+            z-index: 2000;
+            text-transform: uppercase;
+        }
+        .ticker-move {
+            display: inline-block;
+            padding-left: 100%;
+            animation: ticker-animation 30s linear infinite;
+        }
+        @keyframes ticker-animation {
+            0% { transform: translateX(0); }
+            100% { transform: translateX(-100%); }
+        }
+
+        /* 2. NAVIGATION HEADER */
         header {
             background: var(--white);
             height: 70px;
@@ -25,45 +48,48 @@
             padding: 0 8%;
             box-shadow: 0 2px 10px rgba(0,0,0,0.1);
             position: sticky;
-            top: 0;
+            top: 40px; /* Sits below ticker */
             z-index: 1000;
         }
         .logo { font-size: 24px; font-weight: bold; color: var(--blue); text-decoration: none; }
         .nav-links { display: flex; gap: 20px; align-items: center; }
-        .nav-links a { text-decoration: none; color: #444; font-weight: 600; }
+        .nav-links a { text-decoration: none; color: #444; font-weight: 600; font-size: 0.9rem; }
         .lang-select { padding: 5px; border-radius: 5px; border: 1.5px solid var(--blue); cursor: pointer; }
 
-        /* HERO */
+        /* 3. HERO SECTION */
         .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
         .hero {
             background: var(--blue);
             color: white;
-            padding: 50px 20px;
-            border-radius: 20px;
+            padding: 60px 20px;
+            border-radius: 24px;
             text-align: center;
             border-bottom: 8px solid var(--yellow);
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
         }
-        .id-input { padding: 12px; width: 80%; max-width: 350px; border-radius: 8px; border: none; margin: 15px 0; text-align: center; }
+        .id-input { padding: 15px; width: 85%; max-width: 400px; border-radius: 12px; border: none; margin: 20px 0; text-align: center; font-size: 1.1rem; }
 
-        /* TRACKS */
-        .section-h { color: var(--blue); margin: 40px 0 20px; border-left: 6px solid var(--yellow); padding-left: 15px; }
+        /* 4. TRACKS GRID */
+        .section-h { color: var(--blue); margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
         .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 25px; }
-        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 4px 12px rgba(0,0,0,0.08); transition: 0.3s; }
-        .card:hover { transform: translateY(-5px); }
-        .card img { width: 100%; height: 180px; object-fit: cover; }
-        .card-body { padding: 20px; text-align: center; }
+        .card { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.05); transition: 0.3s; text-align: center; }
+        .card:hover { transform: translateY(-10px); }
+        .card img { width: 100%; height: 190px; object-fit: cover; }
+        .card-body { padding: 20px; }
         
-        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 10px 20px; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; }
+        .btn { background: var(--yellow); color: var(--blue); border: none; padding: 12px 20px; border-radius: 10px; font-weight: bold; cursor: pointer; width: 100%; transition: 0.2s; }
         .btn:hover { background: var(--blue); color: white; }
 
-        /* CONTACT US */
-        .contact-form { background: white; padding: 30px; border-radius: 15px; border: 1px solid #ddd; }
-        .contact-form input, .contact-form textarea { width: 100%; padding: 10px; margin-bottom: 10px; border: 1px solid #ccc; border-radius: 5px; }
-
-        footer { text-align: center; padding: 40px; color: #777; font-size: 0.9rem; }
+        footer { text-align: center; padding: 50px; color: #888; border-top: 1px solid #ddd; margin-top: 40px; }
     </style>
 </head>
 <body>
+
+<div class="ticker-wrap">
+    <div class="ticker-move">
+        MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID • JOIN THE DIGITAL TRANSFORMATION NOW • 1 MILLION CITIZENS GOAL • 
+    </div>
+</div>
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
@@ -81,33 +107,26 @@
 <div class="container">
     <div class="hero">
         <h1 id="h-title">Ethiopia's 2026 Digital Mission</h1>
-        <p id="h-sub">Enter Fayda ID to verify enrollment</p>
-        <input type="number" id="id-box" class="id-input" placeholder="Fayda ID Number">
+        <p id="h-sub">Enter Fayda ID to verify enrollment status</p>
+        <input type="number" id="id-box" class="id-input" placeholder="Enter Fayda ID Number">
         <br>
-        <button class="btn" style="width:auto; padding: 12px 40px;" onclick="alert('Verification logic active!')">VERIFY</button>
+        <button class="btn" style="width:auto; padding: 15px 50px;" onclick="alert('System verifying Fayda ID...')">VERIFY & ENTER</button>
     </div>
 
     <div id="about">
         <h2 class="section-h" id="a-head">About Us</h2>
-        <p id="a-text" style="background:white; padding:20px; border-radius:10px;">ልማት Hub is dedicated to Ethiopia's digital transformation journey.</p>
+        <p id="a-text" style="background:white; padding:25px; border-radius:15px; border: 1px solid #eee;">
+            ልማት Hub is the official gateway for Ethiopia's 2026 Digital Mission. We aim to equip 1 million citizens with the tools to lead in the digital economy.
+        </p>
     </div>
 
     <div id="tracks">
         <h2 class="section-h" id="t-head">Official Tracks</h2>
         <div class="grid" id="track-list"></div>
     </div>
-
-    <div id="contact">
-        <h2 class="section-h" id="c-head">Contact Us</h2>
-        <div class="contact-form">
-            <input type="text" id="c-name" placeholder="Full Name">
-            <textarea id="c-msg" placeholder="Your Message" rows="4"></textarea>
-            <button class="btn" onclick="alert('Message Sent!')">Send Message</button>
-        </div>
-    </div>
 </div>
 
-<footer>© 2026 ልማት Hub | Official Partner</footer>
+<footer>© 2026 ልማት Hub | Official Government Partner</footer>
 
 <script>
     const images = [
@@ -125,11 +144,13 @@
 
     const data = {
         en: {
-            title: "Ethiopia's 2026 Digital Mission", vbtn: "VERIFY", about: "About Us", tracks: "Official Tracks", contact: "Contact Us", join: "JOIN TRACK",
+            title: "Ethiopia's 2026 Digital Mission", sub: "Enter Fayda ID to verify enrollment status", 
+            about: "About Us", tracks: "Official Tracks", join: "JOIN TRACK",
             trackNames: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"]
         },
         am: {
-            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", vbtn: "አረጋግጥ", about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", contact: "ያግኙን", join: "ተቀላቀል",
+            title: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", sub: "ምዝገባውን ለማረጋገጥ የፋይዳ መታወቂያዎን ያስገቡ", 
+            about: "ስለ እኛ", tracks: "ይፋዊ ትራኮች", join: "ተቀላቀል",
             trackNames: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"]
         }
     };
@@ -137,20 +158,21 @@
     function updLang(l) {
         const d = data[l] || data.en;
         document.getElementById('h-title').innerText = d.title;
+        document.getElementById('h-sub').innerText = d.sub;
         document.getElementById('a-head').innerText = d.about;
         document.getElementById('t-head').innerText = d.tracks;
-        document.getElementById('c-head').innerText = d.contact;
 
         const list = document.getElementById('track-list');
         list.innerHTML = "";
         d.trackNames.forEach((name, i) => {
             list.innerHTML += `<div class="card">
                 <img src="${images[i]}">
-                <div class="card-body"><h3>${name}</h3><button class="btn" onclick="alert('Joining ${name}...')">${d.join}</button></div>
+                <div class="card-body"><h3>${name}</h3><button class="btn" onclick="alert('Enrolling in ${name}...')">${d.join}</button></div>
             </div>`;
         });
     }
 
+    // INITIAL LOAD
     updLang('en');
 </script>
 </body>
