--- a/index.html
+++ b/index.html
@@ -1,161 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Enrollment Portal</title>
-    <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --green: #28a745; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; scroll-behavior: smooth; }
-        body { background: var(--bg); color: #333; }
+// --- Invisible Data Logic ---
 
-        /* HEADER */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 10px 0; font-weight: bold; position: sticky; top: 0; z-index: 2000; overflow: hidden; white-space: nowrap; }
-        .ticker-content { display: inline-block; padding-left: 100%; animation: scroll 30s linear infinite; }
-        @keyframes scroll { 0% { transform: translateX(0); } 100% { transform: translateX(-100%); } }
-
-        nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 38px; z-index: 1000; }
-        .lang-select { padding: 6px; border-radius: 5px; border: 2px solid var(--blue); cursor: pointer; font-weight: bold; }
-
-        .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
-
-        /* TRACKS GRID */
-        .section-h { color: var(--blue); margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; }
-        .t-box { background: white; border-radius: 20px; overflow: hidden; box-shadow: 0 10px 20px rgba(0,0,0,0.05); border: 1px solid #eee; transition: 0.3s; text-align: center; }
-        .t-box:hover { transform: translateY(-8px); }
-        .t-img { width: 100%; height: 180px; background: var(--blue); }
-        .t-img img { width: 100%; height: 100%; object-fit: cover; }
-        
-        .btn { background: var(--yellow); color: var(--blue); padding: 12px 25px; border: none; border-radius: 8px; font-weight: bold; cursor: pointer; width: 100%; transition: 0.3s; }
-        .btn:hover { background: var(--blue); color: white; }
-
-        /* ENROLLMENT MODAL */
-        #joinModal { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 3000; align-items: center; justify-content: center; }
-        .modal-content { background: white; padding: 30px; border-radius: 20px; width: 90%; max-width: 450px; position: relative; text-align: center; }
-        .modal-content input { width: 100%; padding: 12px; margin: 10px 0; border: 1px solid #ccc; border-radius: 8px; }
-
-        /* FAQ */
-        .faq-card { background: white; padding: 20px; border-radius: 15px; margin-bottom: 10px; cursor: pointer; border: 1px solid #ddd; }
-        .faq-ans { display: none; padding-top: 10px; color: #666; font-size: 0.95rem; border-top: 1px solid #eee; margin-top: 10px; }
-    </style>
-</head>
-<body>
-
-<div class="ticker"><div class="ticker-content" id="tick-text">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA NATIONAL ID •</div></div>
-
-<nav>
-    <h2 style="color:var(--blue)">ልማት Hub</h2>
-    <div class="nav-links">
-        <select class="lang-select" onchange="updLang(this.value)">
-            <option value="en">English</option>
-            <option value="am">አማርኛ</option>
-            <option value="om">Oromoo</option>
-            <option value="tg">ትግርኛ</option>
-        </select>
-    </div>
-</nav>
-
-<div class="container">
-    <h2 class="section-h" id="t-head">Official Tracks</h2>
-    <div class="grid" id="track-list"></div>
-
-    <h2 class="section-h" id="f-head">FAQ</h2>
-    <div id="faq-list"></div>
-</div>
-
-<div id="joinModal">
-    <div class="modal-content">
-        <span onclick="closeModal()" style="position:absolute; right:20px; top:10px; cursor:pointer; font-size:24px;">&times;</span>
-        <h2 id="m-title">Join Track</h2>
-        <p id="m-sub" style="margin-bottom:15px; color:var(--blue); font-weight:bold;"></p>
-        <input type="text" id="regName" placeholder="Full Name">
-        <input type="number" id="regID" placeholder="Fayda ID Number">
-        <button class="btn" onclick="submitEnroll()" id="m-btn">Confirm Enrollment</button>
-    </div>
-</div>
-
-<script>
-    const images = [
-        "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=500", // AI
-        "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=500", // Cyber
-        "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=500", // Web
-        "https://images.pexels.com/photos/3184291/pexels-photo-3184291.jpeg?w=500", // Data
-        "https://images.unsplash.com/photo-1451187580459-43490279c0fa?w=500", // Cloud
-        "https://images.unsplash.com/photo-1512941937669-90a1b58e7e9c?w=500", // Mobile
-        "https://images.unsplash.com/photo-1639762681485-074b7f938ba0?w=500", // Blockchain
-        "https://images.pexels.com/photos/196644/pexels-photo-196644.jpeg?w=500", // UI
-        "https://images.unsplash.com/photo-1518770660439-4636190af475?w=500", // IoT
-        "https://images.pexels.com/photos/259200/pexels-photo-259200.jpeg?w=500"  // Fintech
-    ];
-
-    const data = {
-        en: {
-            tH: "Official Tracks", fH: "FAQ", jB: "JOIN TRACK", mT: "Join Mission", mB: "Confirm Enrollment",
-            tracks: ["AI Engineering", "Cyber Security", "Web Dev", "Data Science", "Cloud", "Mobile Dev", "Blockchain", "UI/UX", "IoT", "Fintech"],
-            faqs: [
-                {q: "Is it free?", a: "Yes, it is 100% free for all citizens."},
-                {q: "How long is the training?", a: "Each track lasts for 12 weeks."}
-            ]
-        },
-        am: {
-            tH: "ይፋዊ ትራኮች", fH: "ተደጋጋሚ ጥያቄዎች", jB: "ተቀላቀል", mT: "ተልዕኮውን ይቀላቀሉ", mB: "ምዝገባውን አረጋግጥ",
-            tracks: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ", "ሞባይል ልማት", "ብሎክቼይን", "ዲዛይን", "አይኦቲ", "ፊንቴክ"],
-            faqs: [
-                {q: "ክፍያ አለው?", a: "አይ፣ ለሁሉም ዜጎች 100% ነፃ ነው።"},
-                {q: "ስልጠናው ለስንት ጊዜ ነው?", a: "እያንዳንዱ ትራክ ለ 12 ሳምንታት ይቆያል።"}
-            ]
-        }
-        // Oromo and Tigrinya can be added following the same pattern
+// 1. Function to save enrollment to browser memory
+function saveEnrollment(id, trackName) {
+    const enrollmentData = {
+        faydaID: id,
+        track: trackName,
+        date: new Date().toLocaleDateString()
     };
+    // Save as a string in localStorage
+    localStorage.setItem('userEnrollment', JSON.stringify(enrollmentData));
+}
 
-    function updLang(l) {
-        const d = data[l] || data['en'];
-        document.getElementById('t-head').innerText = d.tH;
-        document.getElementById('f-head').innerText = d.fH;
-        document.getElementById('m-title').innerText = d.mT;
-        document.getElementById('m-btn').innerText = d.mB;
+// 2. Function to check if user is already enrolled on page load
+function checkEnrollmentStatus() {
+    const savedData = localStorage.getItem('userEnrollment');
+    if (savedData) {
+        const data = JSON.parse(savedData);
+        // Change the UI invisibly to show they are already in
+        document.getElementById('h-sub').innerText = `Welcome back! You are enrolled in: ${data.track}`;
+        document.getElementById('id-box').style.display = 'none'; 
+    }
+}
 
-        const tList = document.getElementById('track-list'); tList.innerHTML = "";
-        d.tracks.forEach((t, i) => {
-            tList.innerHTML += `<div class="t-box">
-                <div class="t-img"><img src="${images[i]}"></div>
-                <div style="padding:15px"><b>${t}</b><button class="btn" onclick="openModal('${t}')">${d.jB}</button></div>
-            </div>`;
-        });
-
-        const fList = document.getElementById('faq-list'); fList.innerHTML = "";
-        d.faqs.forEach((f, i) => {
-            fList.innerHTML += `<div class="faq-card" onclick="toggleF(${i})">
-                <b>${f.q}</b><div id="ans${i}" class="faq-ans">${f.a}</div>
-            </div>`;
-        });
+// 3. Improved Join Function
+function handleJoin(trackName) {
+    const idInput = document.getElementById('id-box').value;
+    
+    // Check if ID is 10 digits (Standard Fayda Length)
+    if (idInput.length < 10) {
+        alert("Invalid Fayda ID. Please enter 10 digits.");
+        return;
     }
 
-    function openModal(track) {
-        document.getElementById('joinModal').style.display = 'flex';
-        document.getElementById('m-sub').innerText = track;
-    }
+    saveEnrollment(idInput, trackName);
+    alert(`Success! You have been invisibly registered for ${trackName}.`);
+    location.reload(); // Refresh to show updated status
+}
 
-    function closeModal() { document.getElementById('joinModal').style.display = 'none'; }
-
-    function toggleF(i) {
-        const a = document.getElementById('ans' + i);
-        a.style.display = a.style.display === 'block' ? 'none' : 'block';
-    }
-
-    function submitEnroll() {
-        const name = document.getElementById('regName').value;
-        const id = document.getElementById('regID').value;
-        if(name && id.length >= 10) {
-            alert("Congratulations " + name + "! You are enrolled. Check your email for details.");
-            closeModal();
-        } else {
-            alert("Please enter full name and valid 10-digit Fayda ID.");
-        }
-    }
-
-    updLang('en');
-</script>
-</body>
-</html>
+// Call check on load
+window.onload = checkEnrollmentStatus;
